--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-    color: lightsteelblue;
+    background-color: lightsteelblue;
 }
 
 .countryCard {
@@ -8,4 +8,8 @@ body {
 
 img {
     width: 50%;
+}
+
+.coatOfArms {
+    height: 50%;
 }
