--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -7,9 +7,11 @@
                 <img src="<%= p.flags.svg %>" alt="flag of country" class="card-img-top mt-3">
                 <div class="card-body">
                     <h5 class="card-title"><%= p.name.official %></h5>
+                    <a href="/places/<%= p.name.official %>" class="btn">Learn More</a>
                 </div>
             </div>
         <% }) %>
     </div>
 </div>
+
 <%- include('../partials/footer') %>
