users can see index of saved places and go to show route

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
         <div id="navbarNav" class="collapse navbar-collapse me-3">
             <% if (loggedIn) {%>
                 <a href="/places/all" class="nav-link text-light me-3">All Countries</a>
-                <a href="/places/new" class="nav-link text-light me-3">Add Country</a>
+                <a href="/places/mine" class="nav-link text-light me-3">My Places</a>
                 <a href="/users/logout" class="nav-link text-light me-3">Log Out</a>
             <%} else {%>
                 <a href="/places/all" class="nav-link text-light me-3">All Countries</a>
